--- a/src/main/resources/static/admin/sanpham/_table.html
+++ b/src/main/resources/static/admin/sanpham/_table.html
@@ -1,156 +1,58 @@
+<div class="row">
+    <div class="col-6"> <button class="btn btn-success btn-block" type="button" data-toggle="modal" data-target="#user-form-modal">
+        New User
+    </button>
+    </div>
 
-<!--        <table id="datatable-buttons"  class="table table-collapse table-bordered dt-responsive">-->
-<!--            <thead>-->
-<!--            <tr>-->
-<!--                <th>Id</th>-->
-<!--                <th>Mã sản phẩm</th>-->
-<!--                <th>Tên sản phẩm</th>-->
-<!--                <th>Trạng thái</th>-->
-<!--                <th>Action</th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--            <tr ng-repeat="item in items">-->
-<!--                <td class="align-center">-->
-<!--                    <img class="w-50" ng-src="assets/images/{{item.image[0].ma}}">-->
-<!--                </td>-->
-<!--                <td class="align-center">{{item.id}}</td>-->
-<!--                <td class="align-center">{{item.ma}}</td>-->
-<!--                <td class="align-center">{{item.ten}}</td>-->
-<!--                <td class="align-center">{{item.trangThai == 0 ?'Hoạt động':'Ngưng hoạt động'}}</td>-->
-<!--                <td class="align-center">-->
-<!--                    <div class="btn-group btn-group-xs">-->
-<!--                        <button ng-click="edit(item)" class="btn btn-icon">-->
-<!--                            <i class="fa fa-xs fa-pen"></i>-->
-<!--                        </button>-->
-<!--                        <button ng-click="delete(item)" class="btn btn-danger">-->
-<!--                            <i class="fa fa-xs fa-times"></i>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </td>-->
-<!--            </tr>-->
-<!--            </tbody>-->
-<!--        </table>-->
-
-<div class="container" ng-if="items">
+</div>
     <div class="row flex-lg-nowrap">
-            <div class="row flex-lg-nowrap">
-                <div class="col-10">
-                    <div class="e-panel card">
-                        <div class="card-body">
-                            <div class="e-table">
-                                <div class="table-responsive table-lg mt-3">
-                                    <table class="table table-collapse table-bordered dt-responsive" id="datatable-buttons">
-                                        <thead>
-                                        <tr>
-                                            <th class="align-top">
-                                                <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0">
-                                                    <input type="checkbox" class="custom-control-input" id="all-items">
-                                                    <label class="custom-control-label" for="all-items"></label>
-                                                </div>
-                                            </th>
-                                            <th>Photo</th>
-                                            <th class="max-width">Name</th>
-                                            <th class="sortable">Date</th>
-                                            <th> </th>
-                                            <th>Actions</th>
-                                        </tr>
+
+        <div class="col mb-3">
+            <div class="e-panel card">
+                <div class="card-body">
+                    <div class="e-table">
+                        <div class="table-responsive">
+                            <table id="datatable-buttons" class="table dataTable no-footer" ng-if="items">
+                                <thead>
+                                <tr>
+                                    <th class="align-top">ID
+                                    </th>
+                                    <th>Ảnh</th>
+                                    <th class="sortable">Tên sản phẩm</th>
+                                    <th class="max-width">Mã sản phẩm</th>
+                                    <th>Trạng thái</th>
+                                    <th>#</th>
+                                </tr>
                                         </thead>
                                         <tbody>
                                         <tr ng-repeat="item in items">
-
-                                            <td class="align-center">{{item.id}}</td>
-                                            <td class="align-center">
-
-                                                <div class="bg-light d-inline-flex justify-content-center align-items-center align-top" style="width: 50%;  border-radius: 3px;">  <img class="w-50" ng-src="/assets/images/{{item.image[0].ma}}"></div>
+                                            <td>{{item.id}}</td>
+                                            <td style="width: 150px"><img style="width: 120px"
+                                                                          ng-src="/assets/images/{{item.image[0].ma}}">
                                             </td>
-                                            <td class="align-center">{{item.ma}}</td>
-                                            <td class="align-center">{{item.ten}}</td>
-                                            <td class="align-center">
-                                                <i class="fa fa-fw text-secondary cursor-pointer" ng-if="item.trangThai == 0 ? true : false" ng-class="{'fa-toggle-on': item.trangThai == 0, 'fa-toggle-off': item.trangThai != 0}"></i>
-                                                <i class="fa fa-fw text-secondary cursor-pointer" ng-if="item.trangThai != 0 ? true : false" ng-class="{'fa-toggle-on': item.trangThai == 0, 'fa-toggle-off': item.trangThai != 0}"></i>
-                                            </td>
-
+                                            <td> {{item.ten}}</td>
+                                            <td>{{item.ma}}</td>
+                                            <td>
+                                                <span ng-if="item.trangThai == 0">Hoạt động</span>
+                                                <span ng-if="item.trangThai == 1">Dừng hoạt động</span></td>
                                             <td class="text-center align-middle">
                                                 <div class="btn-group align-top">
-                                                    <button class="btn btn-sm btn-outline-secondary badge" type="button" data-toggle="modal" data-target="#user-form-modal">Edit</button>
-                                                    <button class="btn btn-sm btn-outline-secondary badge" type="button"><i class="fa fa-trash"></i></button>
+                                                    <button class="btn btn-sm btn-outline-secondary badge" type="button"
+                                                            data-toggle="modal" data-target="#user-form-modal">Edit
+                                                    </button>
+                                                    <button class="btn btn-sm btn-outline-secondary badge"
+                                                            type="button"><i class="fa fa-trash"></i></button>
                                                 </div>
                                             </td>
                                         </tr>
-
                                         </tbody>
-                                    </table>
-                                </div>
-                                <div class="d-flex justify-content-center">
-                                    <ul class="pagination mt-3 mb-0">
-                                        <li class="disabled page-item"><a href="#" class="page-link">‹</a></li>
-                                        <li class="active page-item"><a href="#" class="page-link">1</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">2</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">3</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">4</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">5</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">›</a></li>
-                                        <li class="page-item"><a href="#" class="page-link">»</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="text-center px-xl-3">
-                                <button class="btn btn-success btn-block" type="button" data-toggle="modal" data-target="#user-form-modal">New User</button>
-                            </div>
-                            <hr class="my-3">
-                            <div class="e-navlist e-navlist--active-bold">
-                                <ul class="nav">
-                                    <li class="nav-item active"><a href="" class="nav-link"><span>All</span>&nbsp;<small>/&nbsp;32</small></a></li>
-                                    <li class="nav-item"><a href="" class="nav-link"><span>Active</span>&nbsp;<small>/&nbsp;16</small></a></li>
-                                    <li class="nav-item"><a href="" class="nav-link"><span>Selected</span>&nbsp;<small>/&nbsp;0</small></a></li>
-                                </ul>
-                            </div>
-                            <hr class="my-3">
-                            <div>
-                                <div class="form-group">
-                                    <label>Date from - to:</label>
-                                    <div>
-                                        <input id="dates-range" class="form-control flatpickr-input" placeholder="01 Dec 17 - 27 Jan 18" type="text" readonly="readonly">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Search by Name:</label>
-                                    <div><input class="form-control w-100" type="text" placeholder="Name" value=""></div>
-                                </div>
-                            </div>
-                            <hr class="my-3">
-                            <div class="">
-                                <label>Status:</label>
-                                <div class="px-2">
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" class="custom-control-input" name="user-status" id="users-status-disabled">
-                                        <label class="custom-control-label" for="users-status-disabled">Disabled</label>
-                                    </div>
-                                </div>
-                                <div class="px-2">
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" class="custom-control-input" name="user-status" id="users-status-active">
-                                        <label class="custom-control-label" for="users-status-active">Active</label>
-                                    </div>
-                                </div>
-                                <div class="px-2">
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" class="custom-control-input" name="user-status" id="users-status-any" checked="">
-                                        <label class="custom-control-label" for="users-status-any">Any</label>
-                                    </div>
-                                </div>
-                            </div>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
             <!-- User Form Modal -->
             <div class="modal fade" role="dialog" tabindex="-1" id="user-form-modal">
@@ -260,6 +162,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<script src="/assetss/js/init.js"></script>
+
+
