--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -152,6 +152,9 @@
                     <a href="components.html"><i data-feather="layers"></i><span> Blogs</span> </a>
                 </li>
                 <li>
+                    <a href="#!product"><i  data-feather="layers"></i><span> Đánh giá</span> </a>
+                </li>
+                <li>
                 <li class="submenu">
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/settings.svg" alt="img"><span> Thiết lập</span> <span class="menu-arrow"></span></a>
                     <ul>
@@ -227,7 +230,7 @@
 <script src="/assetss/js/angular-route.min.js"></script>
 <script src="/assetss/ctrl/admin-ctrl.js"></script>
 <script src="/assetss/ctrl/account-ctrl.js"></script>
-<script src="/assetss/ctrl/product-ctrl.js"></script>
+<script src="/assetss/ctrl/rating-ctrl.js"></script>
 <script src="/assetss/ctrl/category-ctrl.js"></script>
 <script src="/assetss/ctrl/authority-ctrl.js"></script>
 <script src="/assetss/ctrl/order-ctrl.js"></script>
