--- a/src/main/resources/static/admin/dashboard.html
+++ b/src/main/resources/static/admin/dashboard.html
@@ -103,8 +103,8 @@
 							<br>
 							<button class="btn btn-primary" ng-click="exportDoanhThuThangToExcel()">Xuất Excel</button>
 							<br>
-							<label class="form-label" >Chọn ngày bắt đầu:</label>
-							<input class="form-control" type="date" ng-model="sevenDaysAgo">
+<!--							<label class="form-label" >Chọn ngày bắt đầu:</label>-->
+<!--							<input class="form-control" type="date" ng-model="sevenDaysAgo">-->
 
 							<label class="form-label">Chọn ngày kết thúc:</label>
 							<input class="form-control" type="date" ng-model="currentDate">
