--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -113,18 +113,18 @@
                         <li><a href="#!sanpham">Sản phẩm</a></li>
                         <li><a href="#">Chi tiết sản phẩm</a></li>
                         <li><a href="#!thuonghieu">Thương hiệu</a></li>
-                        <li><a href="#!mausac">Màu sắc</a></li>
-                        <li><a href="#">Kích cỡ</a></li>
-                        <li><a href="#">Chất liệu</a></li>
-                        <li><a href="#">Cổ áo</a></li>
-                        <li><a href="#">Thương hiệu</a></li>
-                        <li><a href="#">Phân khúc</a></li>
+                        <li><a href="#!color">Màu sắc</a></li>
+                        <li><a href="#!kichco">Kích cỡ</a></li>
+                        <li><a href="#!chatlieu">Chất liệu</a></li>
+                        <li><a href="#!coao">Cổ áo</a></li>
+                        <li><a href="#!thuonghieu">Thương hiệu</a></li>
+                        <li><a href="#!loaikhachhang">Phân khúc</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/sales1.svg" alt="img"><span>Đơn hàng</span> <span class="menu-arrow"></span></a>
                     <ul>
-                        <li><a href="#">Chờ xác nhận</a></li>
+                        <li><a href="#!order">Chờ xác nhận</a></li>
                         <li><a href="#">Đã xác nhận</a></li>
                         <li><a href="#">Giao hàng</a></li>
                         <li><a href="#">Hoàn thành</a></li>
@@ -144,7 +144,7 @@
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/users1.svg" alt="img"><span> Người dùng</span> <span class="menu-arrow"></span></a>
                     <ul>
                         <li><a href="#!account">Người dùng</a></li>
-                        <li><a href="supplierlist.html">Phân quyền</a></li>
+                        <li><a href="#!unauthorized">Phân quyền</a></li>
                         <li><a href="addsupplier.html">Thống kê</a></li>
 
                     </ul>
@@ -152,7 +152,7 @@
                     <a href="components.html"><i data-feather="layers"></i><span> Blogs</span> </a>
                 </li>
                 <li>
-                    <a href="#!product"><i  data-feather="layers"></i><span> Đánh giá</span> </a>
+                    <a href="#!product"><i data-feather="award"></i><span> Đánh giá</span> </a>
                 </li>
                 <li>
                 <li class="submenu">
@@ -177,35 +177,6 @@
     </div>
 </div>
 
-
-
-
-
-
-
-
-<!--    <div id="preloader">-->
-<!--        <div id="status">-->
-<!--            <div class="spinner"></div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div id="wrapper">-->
-<!--        <div ng-include="'/admin/_sidebar.html'"></div>-->
-<!--        <div class="content-page">-->
-<!--            <div class="content">-->
-<!--                <div ng-include="'/admin/_topbar.html'"></div>-->
-<!--                <div class="ng-view">-->
-<!--                </div>-->
-
-<!--            </div>-->
-<!--            <footer class="footer">-->
-<!--&lt;!&ndash;                Copyright © 2022 <b>Julie</b>. All rights reserved.&ndash;&gt;-->
-<!--            </footer>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- Include AngularJS -->
-
-    <!-- Include Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
