--- a/src/main/resources/static/admin/sanpham/_table.html
+++ b/src/main/resources/static/admin/sanpham/_table.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <div class="e-table">
                         <div class="table-responsive">
-                            <table id="datatable-buttons" class="table dataTable no-footer" ng-if="items">
+                            <table id="datatable-buttons" class="table table-collapse table-bordered dt-responsive dataTable no-footer dtr-inline" ng-if="items">
                                 <thead>
                                 <tr>
                                     <th class="align-top">ID
@@ -37,11 +37,9 @@
                                                 <span ng-if="item.trangThai == 1">Dừng hoạt động</span></td>
                                             <td class="text-center align-middle">
                                                 <div class="btn-group align-top">
-                                                    <button class="btn btn-sm btn-outline-secondary badge" type="button"
-                                                            data-toggle="modal" data-target="#user-form-modal">Edit
+                                                    <button class="btn btn-icon" type="button"
+                                                            data-toggle="modal" data-target="#user-form-modal"> <i class="fa fa-xs fa-pen"></i>
                                                     </button>
-                                                    <button class="btn btn-sm btn-outline-secondary badge"
-                                                            type="button"><i class="fa fa-trash"></i></button>
                                                 </div>
                                             </td>
                                         </tr>
