--- a/src/main/resources/static/admin/blogs/blogs.html
+++ b/src/main/resources/static/admin/blogs/blogs.html
@@ -151,7 +151,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Chỉnh sửa bài viết</h5>
+                <h5 class="modal-title">Blogs</h5>
                 <button type="button" class="close" data-dismiss="modal" ng-click="resetModal()">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -174,17 +174,17 @@
                                     <label>Ảnh</label>
                                     <div class="row">
                                         <div class="col-md-4 text-center">
-                                        <span ng-if="form.image == null">
+                                        <span ng-if="form.anh == null">
                                             <img ng-src="{{'/assets/images/cloud-upload.jpg'}}"
                                                  style="max-width: 100%;">
                                         </span>
-                                            <span ng-if="form.image != null">
-                                            <img ng-src="{{'/assets/images/'+form.image}}"
+                                            <span ng-if="form.anh != null">
+                                            <img ng-src="/assets/images/{{form.anh}}"
                                                  style="max-width: 100%;">
                                         </span>
                                         </div>
                                         <div class="col-md-8">
-                                            <input type="file" class="custom-file-input" id="image" name="anh" ng-model="form.anh"
+                                            <input type="file" class="custom-file-input" id="image" name="file"
                                                    onchange="angular.element(this).scope().imageChanged(this.files)" style="margin-top: 5rem">
                                         </div>
                                     </div>
