--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -111,7 +111,7 @@
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/product.svg" alt="img"><span> Sản phẩm</span> <span class="menu-arrow"></span></a>
                     <ul>
                         <li><a href="#!sanpham">Sản phẩm</a></li>
-                        <li><a href="#">Chi tiết sản phẩm</a></li>
+                        <li><a href="#!chitietsp">Thêm sản phẩm</a></li>
                         <li><a href="#!thuonghieu">Thương hiệu</a></li>
                         <li><a href="#!mausac">Màu sắc</a></li>
                         <li><a href="#">Kích cỡ</a></li>
@@ -230,6 +230,7 @@
 <script src="/assetss/js/angular-route.min.js"></script>
 <script src="/assetss/ctrl/admin-ctrl.js"></script>
 <script src="/assetss/ctrl/account-ctrl.js"></script>
+<script src="/assetss/ctrl/chitietsp-ctrl.js"></script>
 <script src="/assetss/ctrl/rating-ctrl.js"></script>
 <script src="/assetss/ctrl/category-ctrl.js"></script>
 <script src="/assetss/ctrl/authority-ctrl.js"></script>
