--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -59,6 +59,9 @@
                     <a href="components.html"><i data-feather="layers"></i><span> Blogs</span> </a>
                 </li>
                 <li>
+                    <a href="components.html"><i data-feather="layers"></i><span> Đánh giá</span> </a>
+                </li>
+                <li>
                 <li class="submenu">
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/settings.svg" alt="img"><span> Thiết lập</span> <span class="menu-arrow"></span></a>
                     <ul>
