amen chú ý entity+dùng db mới

--- a/src/main/resources/static/admin/chitietsp/addproduct.html
+++ b/src/main/resources/static/admin/chitietsp/addproduct.html
@@ -114,7 +114,7 @@
                                     </h4>
                                 </div>
                                 <div class="row">
-                                <div class="col-lg-6 mb-3" ng-repeat="productDetail in productData.chiTietSanPhams track by $index">
+                                <div class="col-lg-6 mb-3" ng-repeat="productDetail in productData.ctsp track by $index">
                                     <div class="card mb-3">
                                         <h4 class="d-flex justify-content-between align-items-center mb-1">
                                             <button class="btn btn-danger mb-2" ng-click="removeProductDetail($index)"><i class="fa fa-trash"></i></button>
