--- a/src/main/resources/static/admin/phu/thuonghieu/index.html
+++ b/src/main/resources/static/admin/phu/thuonghieu/index.html
@@ -11,25 +11,21 @@
                             <li class="breadcrumb-item active">Thương hiệu</li>
                         </ol>
                     </div>
-                    <h4 class="page-title">Thương hiệu</h4>
+<div class="row">
+    <div class="col-6"><h4 class="page-title">Thương hiệu</h4></div>
+    <div class="col-6"> <div class="page-header justify-content-end"><div class="page-btn" >
+        <a href="addpurchase.html" class="btn btn-added" style="background: #6c757d">
+            <img src="/assetss/img/icons/plus.svg" >Thêm mới
+        </a>
+    </div>
+    </div></div>
+
+
+</div>
                 </div>
             </div>
         </div>
-<!--        <nav>-->
-<!--            <div class="nav nav-tabs" id="nav-tab" role="tablist">-->
-<!--                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"-->
-<!--                   role="tab" aria-selected="false">EDITION</a>-->
-<!--                <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"-->
-<!--                   role="tab" aria-selected="true">LISTS</a>-->
-<!--            </div>-->
-<!--        </nav>-->
         <div class="tab-content" id="nav-tabContent">
-<!--            <div class="tab-pane fade" id="edit" role="tabpanel">-->
-<!--                <div ng-include="'/admin/phu/thuonghieu/_form.html'"></div>-->
-<!--            </div>-->
-<!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
-<!--                <div ng-include="'/admin/phu/thuonghieu/_table.html'"></div>-->
-<!--            </div>-->
             <div class="tab-pane fade show active" id="list" role="tabpanel">
                 <div ng-include="'/admin/phu/thuonghieu/view.html'"></div>
             </div>
